# plm-regressor

./: .gitignore  CONTRIBUTING.md  LICENSE  PET.yml  README.md  app.py  mkdocs.yml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml
data/: 21h_activity_TPA_release_0_1MKPB.csv  21h_activity_TPA_release_1MKPB.csv  PETdegrad_weight_loss_0_1MKPB_.csv  PETdegrad_weight_loss_1MKPB_.csv  README.md  Tm_for_variants_1-335.csv
docs/: 404.html  cli.md  concepts.md  gui.md  index.md  install.md  models.md
docs/cli/: index.html
docs/concepts/: index.html
docs/models/: index.html
docs/search/: search_index.json
docs_src/: install.md  models.md
embeddings/: esm1v.npz  esm2.npz  prosst.npz  prostT5.npz  protT5_half.npz
field-guide/: MLDE_WORKFLOW.md
plm_regressor/: __init__.py  cli.py  config.py  core.py  features.py  metrics.py  plots.py  predict.py  registry.py  report.py  search.py  sizing.py  train.py
plm_regressor/embeddings/: __init__.py  extract.py
plm_regressor/models/: __init__.py  classical.py  torch_models.py
scripts/: merge_wt_embedding.py  mlde_utils.py  rank_zero_shot_candidates.py  scatter_plot.py  scatter_plot.sh  select_best_supervised_model.py  training3_optuna_mlde_uncertainty.py
scripts/embeds_scripts/: extract_esm1v_embeddings.py  extract_esm2_embeddings.py  extract_prosst_embeddings.py  extract_prot_t5_embeddings.py  zeroshot.sh
site/: index.html  sitemap.xml
site/gui/: index.html
site/install/: index.html
