[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plm-regressor"
version = "0.2.0"
description = "General sequence -> property regression framework (MLDE) with pLM embeddings, deep + classical regressors, size-aware Optuna search, and a Streamlit GUI"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "joblib>=1.3",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "optuna>=3.5",
    "matplotlib>=3.5",
    "pyyaml>=6.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
boost = ["xgboost>=2.0", "lightgbm>=4.0"]
deep = ["torch>=2.1"]
esm = ["fair-esm>=2.0"]
# ESM C / Cambrian. NOTE: EvolutionaryScale's `esm` package imports as `esm` and
# collides with `fair-esm` -- install this in a SEPARATE env from [esm].
esmc = ["esm>=3.1"]
carp = ["sequence-models>=1.7"]
t5 = ["transformers>=4.36", "sentencepiece>=0.1.99"]
hf = ["transformers>=4.36"]
gui = ["streamlit>=1.30"]
docs = ["mkdocs-material>=9.5"]
all = [
    "xgboost>=2.0", "lightgbm>=4.0", "torch>=2.1", "fair-esm>=2.0",
    "transformers>=4.36", "sentencepiece>=0.1.99", "streamlit>=1.30",
]

[project.scripts]
plm-regressor = "plm_regressor.cli:main"

[tool.setuptools]
packages = ["plm_regressor", "plm_regressor.models", "plm_regressor.embeddings"]
py-modules = ["app"]
